# FastAPIproject

./: .flake8  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 0b338971e2a3_database_creation.py  17638a06106d_update_colown_price_in_book.py  9df5f4ee8114_rework_column_in_table_book.py  aeb51f4b74a1_refactor_purchase_on_syntax_error.py  af151d88e833_init.py  c517e9defa57_refactor_relationship.py  c5add1746bb0_add_field_is_active_and_is_admin_in_user.py  e08786886ac5_rework_database_model.py  e3e89f2f588c_refactor_relationship.py  f78377e221db_rework.py
src/: __main__.py
src/api/v1/: api.py
src/api/v1/endpoints/book/: author.py  book.py  genre.py
src/api/v1/endpoints/cart/: cart.py
src/api/v1/endpoints/login/: login.py
src/api/v1/stub/: stub.py
src/common/converts/: author.py  book.py  genre.py  purchase.py  user.py
src/common/schemas/book/: author.py  book.py  cover_type.py  genre.py  publisher.py  rars.py
src/common/schemas/purchase/: item.py  purchase.py
src/common/schemas/user/: user.py
src/config/: setting.py
src/middleware/: add_midleware.py
src/service/database/: session.py
src/service/database/models/: __init__.py  base.py
src/service/database/repositories/: base.py
src/service/security/: secturity.py
src/services/cart/: cart.py
src/services/database/: __init__.py
src/services/database/migrations/: env.py
src/services/database/models/: base.py
src/services/database/repositories/: base.py
src/services/security/: JWT.py  jwt.py  secturity.py
(+55 files in other folders)
